add permission for branch deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
+  on:
+    branch: 'RELEASE_2.0'
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
